# tima

./: .gitignore  MIGRATION.md  PYCHARM_SETUP.md  README.md  pyproject.toml  tima.py  tima_projects.json  tima_v0.py
src/tima_timer/: __init__.py  __main__.py  app.py  app_flet.py  models.py  state.py  timer_logic.py
