[project]
name = "tima-timer"
version = "1.0.4"
description = "A sleek desktop productivity timer for managing multiple projects"
readme = "README.md"
requires-system = "tkinter"
authors = [
    { name = "Amir Rosenfeld", email = "amir.rosenfeld@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "pillow>=9.0.0",
]
keywords = ["timer", "productivity", "time-management", "project-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/rosenfeldamir/tima"
Repository = "https://github.com/rosenfeldamir/tima"
Issues = "https://github.com/rosenfeldamir/tima/issues"

[project.scripts]
tima = "tima_timer.app:main"

[project.gui-scripts]
tima-gui = "tima_timer.app:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

