[project]
name = "tima-timer"
version = "1.1.0"
description = "A modern cross-platform productivity timer for managing multiple projects (Flet-based)"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Amir Rosenfeld", email = "amir.rosenfeld@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "flet[all]>=0.24.0",
]
keywords = ["timer", "productivity", "time-management", "project-management"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/rosenfeldamir/tima"
Repository = "https://github.com/rosenfeldamir/tima"
Issues = "https://github.com/rosenfeldamir/tima/issues"

[project.scripts]
tima = "tima_timer.app:main"

[project.gui-scripts]
tima-gui = "tima_timer.app:main"

[build-system]
requires = ["uv_build>=0.9.13,<0.10.0"]
build-backend = "uv_build"

